<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".transacoes">

    <TextView
        android:id="@+id/textoBoasVindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/nomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= ""
        app:layout_constraintStart_toEndOf="@id/textoBoasVindas"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/label_contaCorrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo_conta_corrente"
        app:layout_constraintTop_toBottomOf="@id/textoBoasVindas"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/saldoContaCorrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200.0"
        app:layout_constraintStart_toEndOf="@id/label_contaCorrente"
        app:layout_constraintTop_toBottomOf="@id/textoBoasVindas"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/label_contaPoupanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo_conta_poupanca"
        app:layout_constraintTop_toBottomOf="@id/label_contaCorrente"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/saldoContaPoupanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="500.0"
        app:layout_constraintStart_toEndOf="@id/label_contaPoupanca"
        app:layout_constraintTop_toBottomOf="@id/label_contaCorrente"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonContaCorrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_conta_corrente"
        app:layout_constraintStart_toStartOf="@id/label_contaCorrente"
        app:layout_constraintTop_toBottomOf="@id/label_contaPoupanca"
        android:layout_marginTop="16dp">
    </Button>

    <Button
        android:id="@+id/buttonContaPoupanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butto_conta_poupanca"
        app:layout_constraintStart_toEndOf="@id/buttonContaCorrente"
        app:layout_constraintTop_toBottomOf="@id/label_contaPoupanca"
        app:layout_constraintEnd_toEndOf="@id/inputUsuario"
        android:layout_marginTop="16dp">
    </Button>

    <TextView
        android:id="@+id/linha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/espaco"
        app:layout_constraintTop_toBottomOf="@id/buttonContaCorrente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/input_valor_transacao"
        app:layout_constraintTop_toBottomOf="@id/linha"
        app:layout_constraintStart_toStartOf="@id/label_contaCorrente"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:inputType="number"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonDepositar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/label_contaCorrente"
        app:layout_constraintTop_toBottomOf="@id/inputUsuario"
        android:text="@string/button_depositar"
        android:textColor="#ffffff"
        android:layout_marginTop="16dp">
    </Button>

    <Button
        android:id="@+id/buttonSacar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/buttonDepositar"
        app:layout_constraintTop_toBottomOf="@id/inputUsuario"
        android:text="@string/button_sacar"
        android:textColor="#ffffff"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp">
    </Button>

    <Button
    android:id="@+id/buttonTransferir"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toEndOf="@id/buttonSacar"
    app:layout_constraintTop_toBottomOf="@id/inputUsuario"
    android:text="@string/button_transferir"
    android:textColor="#ffffff"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp">
    </Button>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lista_transacoes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonDepositar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/layout_linha_transacao"
        >
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>