<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".criar_cliente">

    <TextView
        android:id="@+id/criar_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_criar_cliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputClienteNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_nome_cliente"
        app:layout_constraintTop_toBottomOf="@id/criar_cliente"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputClienteCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_cpf_cliente"
        app:layout_constraintTop_toBottomOf="@id/inputClienteNome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="number"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCriarCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butto_criar_cliente"
        app:layout_constraintTop_toBottomOf="@id/inputClienteCpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">
    </Button>





</androidx.constraintlayout.widget.ConstraintLayout>